# ranbo

./: .gitignore  CMakeLists.txt  LICENSE.rst  NEWS.rst  README.rst  giit.json  library.json  lock_version_resolve.json  resolve.json  wscript
.github/workflows/: kernel_example.yml  platformio.yml  raspberry_pi.yml  valgrind.yml  windows_cmake.yml  windows_mkspecs.yml
benchmark/: generate_and_seed.cpp  generation.cpp  seeding.cpp  wscript_build
docs/: conf.py  index.rst  requirements.txt
docs/examples/: bit_occurences.rst  bit_occurrences.rst  examples.rst  hello_world.rst  kernel_example.rst
docs/user_api/: rand48.rst  user_api.rst  xoshiro256ss.rst  xoshiro64s.rst
docs/user_templates/: c_struct_synopsis.rst  c_struct_with_functions_synopsis.rst
examples/: bit_occurrences.cpp  hello_world.cpp  platform_io_example.ino  wscript_build
examples/kernel/: Makefile  main.c  wscript_build
src/ranbo/: ranbo.h  rand48.h  xoshiro256ss.h  xoshiro64s.h
src/template/: some.cpp  some.hpp  wscript_build
test/: ranbo_tests.cpp  wscript_build
test/src/: test_rand48.cpp  test_some.cpp  test_xoshiro256ss.cpp  test_xoshiro64s.cpp
